# SMA_Sunny_Boy_OPC_Server

./: .clang-format  CMakeLists.txt  config.h  config_parser.cpp  config_parser.h  logger.c  logger.h  main.c  modbus_client.c  modbus_client.h  opcua_server.c  opcua_server.h  readme.md  sma_opcua_config.yaml
include/: config.h  config_parser.h  main.h  opcua_server.h
src/: config_parser.cpp  logger.c  main.c  modbus_client.c  opcua_server.c
